--- a/app/src/main/res/layout/activity_post.xml
+++ b/app/src/main/res/layout/activity_post.xml
@@ -7,6 +7,7 @@
     tools:context=".PostActivity">
 
     <include
+        android:id="@+id/include"
         layout="@layout/row"
         android:layout_width="wrap_content"
         android:layout_height="341dp"
@@ -27,13 +28,14 @@
         android:layout_marginStart="8dp"
 
         android:layout_marginLeft="8dp"
+        android:layout_marginTop="308dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         app:layout_constraintEnd_toStartOf="@+id/btnCancel"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@android:drawable/checkbox_on_background"
-        tools:layout_editor_absoluteY="678dp" />
+        app:layout_constraintTop_toBottomOf="@+id/include"
+        app:srcCompat="@android:drawable/checkbox_on_background" />
 
     <ImageButton
         android:id="@+id/btnCancel"
@@ -41,10 +43,11 @@
         android:layout_height="37dp"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
+        android:layout_marginTop="308dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/btnOk"
-        app:srcCompat="@android:drawable/btn_dialog"
-        tools:layout_editor_absoluteY="678dp" />
+        app:layout_constraintTop_toBottomOf="@+id/include"
+        app:srcCompat="@android:drawable/btn_dialog" />
 </android.support.constraint.ConstraintLayout>
